 ! remove CMD_SET_WANTED_MAX_SPEED
 - allow CEG trails for crashing aircraft (engine will randomly select from any generators listed in sfxTypes.crashExplosionGenerators)
 - DGun weapontype: allow leading (leadLimit for DGun defaults to 0 instead of -1 for back-compatibility)

Lua:
 - add Platform.osVersion; complements Platform.osName
 - add Platform.hwConfig
 - Script.IsEngineMinVersion now available in all Lua parsing contexts,
   most importantly in `defs.lua`
 ! remove Game.mapHumanName
 ! remove UnitDefs[i].moveDef.{family,type}
 - let Spring.SelectUnitArray select enemy units with godmode enabled
 - let Unit*Collision callins skip engine collision handling if true is returned (from any synced gadget)
 - call gadgetHandler:Explosion for unsynced gadgets (but discard the return value)
 - allow specifying source by position but target by ID for Spring.GetUnitWeaponHaveFreeLineOfFire
 - allow setting terrain-type hardness and name via Spring.SetTerrainTypeData
 ! return the terrain-type index from Spring.GetGroundInfo and Spring.GetTerrainTypeData
   these functions now push [number index, string name, ...] rather than [string name, ...]
   onto the stack
 ! change DefaultCommand call order
    previously widgets were called first, and if they returned anything, gadgets weren't called at all
    now gadgets are called first, then widgets are always called and can override
 - add a 3rd param to DefaultCommand callin: the current default command
    works with the above: gadgets receive the default engine cmd,
    widgets then receive what gadgets returned (possibly engine default)
 - add  Spring.GetGlobalLos(allyTeamID) -> bool  to LuaSyncedRead
 - add  Spring.IsNoCostEnabled() -> bool  to LuaSyncedRead
 - add Spring.SetWind(number minStrength, number maxStrength)
 - add Spring.SetTidal(number strength)
 - add Spring.GetTidal
 - add Spring.{Unit,Feature}Rendering.SetProjectileLuaDraw
 - add Spring.{Unit,Feature}Rendering.Set{Deferred,Forward}MaterialUniform